--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -32,7 +32,7 @@ Azure is niet de enigste cloud provider die ETL tools aanbiedt. Zo heeft AWS bij
 \label{sec:methodologie}
 
 \begin{center}
-    \includegraphics[width=0.2\textwidth]{graphics/methodologie.png}    
+    \includegraphics[width=0.2\textwidth]{../voorstel/graphics/methodologie.png}    
 \end{center}
 
 De eerste fase is het literatuuronderzoek. Hierbij wordt er gekeken naar welke mogelijkheden er zijn voor het implementeren van ETL's en ELT's. Er zal vooral gefocust worden op de mogelijkheden binnen Azure maar ook andere opties zullen bekeken worden. Dit zal gedaan worden met behulp van academische onderzoekstools zoals Google Scholar en andere relevante databanken en bronnen. Ook de documentatie van Azure, casestudies van bedrijven die gebruik maken van Azure en blogs van experts op dit vakgebied zullen hier zeker bij van pas komen. Deze fase zal ook zeker in samenwerkingen met Net IT gebeuren zodat de huidige gebruikte technologieën voor het implementeren van ETL's en ELT's zeker niet uitgesloten worden. Dit onderdeel zal naar verwachting vier weken in beslag nemen. 
