--- a/bachproef/FamilienaamVoornaamBP.tex
+++ b/bachproef/FamilienaamVoornaamBP.tex
@@ -52,11 +52,11 @@
 
 %%---------- Document metadata -------------------------------------------------
 % TODO: Replace this with your own information
-\author{Ernst Aarden}
-\supervisor{Dhr. F. Van Houte}
-\cosupervisor{Mevr. S. Beeckman}
+\author{Lievens Loeka}
+\supervisor{Dhr. Bosteels Gertjan}
+\cosupervisor{Dhr. Van Damme Koen}
 \title[Optionele ondertitel]%
-    {Titel van de bachelorproef}
+    {Optimaliseren van gegevensverwerking in MicrosoftAzure: Een vergelijkende analyse van implementatiemethoden voor Extractie, Transformatie en Laden(ETL) en Extractie, Laden en Transformatie (ELT)}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
 \examperiod{1}
 \degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
